Basic structure and functionality added, dark/light mode operational

--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Personal Blog</title>
-    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/form.css">
 </head>
 <body>
+    <button id="switch"></button>
     <h1 class="title">My First Blog</h1>
-    <div>What is on your mind?</div>
-    <form>Username:</form>
-    <form>Title:</form>
-    <form>Content:</form>
-    <button>Submit</button>
-    <script src="assets/js/logic.js"></script>
+    <h2 class="question">What is on your mind?</h2>
+    <section class="input">
+        <form>Username:<input></form>
+        <form>Title:<input></form>
+        <form>Content:<input></form>
+        <a href='blog.html'><button>Submit</button></a>
+    </section>
     <script src="assets/js/form.js"></script>
 </body>
 </html>
