--- a/blog.html
+++ b/blog.html
@@ -6,8 +6,12 @@
     <link rel="stylesheet" href="./assets/css/blog.css">
 </head>
 <body>
-    
-    <script src="assets/js/logic.js"></script>
+    <button id="switch"></button>
+    <section>
+        <h2>Title here</h2>
+        <h2>User here</h2>
+        <p>Content here</p>
+    </section>
     <script src="assets/js/blog.js"></script>
 </body>
 </html>
