added a form that stores data in local storage

--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Personal Blog</title>
     <link rel="stylesheet" href="./assets/css/blog.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
     <button id="switch"></button>
@@ -12,6 +13,7 @@
         <h2>User here</h2>
         <p>Content here</p>
     </section>
+    <!-- <script src="assets/js/blog.js"></script> -->
     <script src="assets/js/blog.js"></script>
 </body>
 </html>
