Added logic to handle local storage and update blog

--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
                 <input type="text" id="title" name="title"><br><br>
                 <label for="content">Content:</label><br>
                 <textarea type="text" id="content" name="content" rows="10" cols="50"></textarea><br><br>
-                <input href='blog.html' id='submit' type="submit">
+                <input id='submit' type="submit">
             </fieldset>
         </form>
     </section>
-    <!-- <script src="assets/js/form.js"></script> -->
     <script src="assets/js/form.js"></script>
 </body>
 </html>
