--- a/blog.html
+++ b/blog.html
@@ -8,12 +8,32 @@
 </head>
 <body>
     <button id="switch"></button>
-    <section>
-        <h2>Title here</h2>
-        <h2>User here</h2>
+    <section id="1">
+        <h2 class="title">Title here</h2>
+        <h2 class="name">User here</h2>
         <p>Content here</p>
-    </section>
-    <!-- <script src="assets/js/blog.js"></script> -->
+    </section><br><br>
+    <section id="2">
+        <h2 class="title">Title here</h2>
+        <h2 class="name">User here</h2>
+        <p>Content here</p>
+    </section><br><br>
+    <section id="3">
+        <h2 class="title">Title here</h2>
+        <h2 class="name">User here</h2>
+        <p>Content here</p>
+    </section><br><br>
+    <section id="4">
+        <h2 class="title">Title here</h2>
+        <h2 class="name">User here</h2>
+        <p>Content here</p>
+    </section><br><br>
+    <section id="5">
+        <h2 class="title">Title here</h2>
+        <h2 class="name">User here</h2>
+        <p>Content here</p>
+    </section><br><br>
     <script src="assets/js/blog.js"></script>
+    <script src="assets/js/logic.js"></script>
 </body>
 </html>
