--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <form>
             <fieldset class="blog">
                 <legend>Blog</legend>
-                <label for="name">Name:</label><br>
+                <label for="name">Username:</label><br>
                 <input type="text" id="name" name="name"><br><br>
                 <label for="title">Title:</label><br>
                 <input type="text" id="title" name="title"><br><br>
