Fixed local storage problems, added footer, added back button, and tweaked some style options

--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
-    <button id="switch"></button>
+    <header>
+        <h1>My First Blog</h1>
+        <button id="switch"></button>
+        <div class="back"><a href="index.html"><button id="back">Back</button></a></div>
+    </header>
     <section id="1">
         <h2 class="title">Title here</h2>
         <h2 class="name">User here</h2>
@@ -33,6 +37,11 @@
         <h2 class="name">User here</h2>
         <p>Content here</p>
     </section><br><br>
+    <div id="scr">
+        <a href="https://ernestoag.github.io/Portfolio-Website/">Portfolio Website</a>
+        <div>Ernesto Gonzalez</div>
+        <div>Phone number: ***-***-****</div>
+    </div>
     <script src="assets/js/blog.js"></script>
     <script src="assets/js/logic.js"></script>
 </body>
